@@ -16,6 +16,10 @@ doFuture <- function(obj, expr, envir, data) {
   argsList <- as.list(it)
   accumulator <- makeAccum(it)
 
+  ## WORKAROUND: foreach::times() passes an empty string in 'argnames'
+  argnames <- it$argnames
+  argnames <- argnames[nzchar(argnames)]
+  
   ## Global variables?
   export <- unique(obj$export)
   if (is.null(export)) {
@@ -25,7 +29,7 @@ doFuture <- function(obj, expr, envir, data) {
     globals <- getOption("doFuture.globals.nullexport", TRUE)
   } else {
     ## Export also the other foreach arguments
-    globals <- unique(c(export, it$argnames))
+    globals <- unique(c(export, argnames))
   }
   export <- NULL
   
@@ -47,9 +51,12 @@ doFuture <- function(obj, expr, envir, data) {
   })
 
   globals_envir <- new.env(parent = envir)
-  if (length(it$argnames) > 0) {
+  if (length(argnames) > 0) {
     ## Add the arguments as dummy variables
-    for (name in it$argnames) {
+    mdebug("- Adding dummy variables for arguments: %s",
+           paste(sQuote(argnames), collapse = ", "))
+    for (name in argnames) {
+      mdebug("- argument: %s", sQuote(name))
       assign(name, NULL, envir = globals_envir, inherits = TRUE)
     }
   }  
@@ -67,9 +74,9 @@ doFuture <- function(obj, expr, envir, data) {
     mstr(globals)
   }
   
-  ## Make sure all elements of `it$argnames` are in the 'globals' set.
+  ## Make sure all elements of `argnames` are in the 'globals' set.
   ## If not, then add the missing ones.
-  globals_missing <- setdiff(it$argnames, names_globals)
+  globals_missing <- setdiff(argnames, names_globals)
   if (length(globals_missing) > 0) {
     ## Create dummy place holders
     globals_extra <- vector("list", length = length(globals_missing))
@@ -91,15 +98,18 @@ doFuture <- function(obj, expr, envir, data) {
   for (ii in seq_along(argsList)) {
     if (debug) mdebug("- creating future #%d of %d ...", ii, nchunks)
     args <- argsList[[ii]]
+    
+    ## WORKAROUND: foreach::times() passes an empty string in 'argList[[*]]'
     names_args <- names(args)
+    names_args <- names_args[nzchar(names_args)]
     if (debug) {
       mdebug("- foreach::`%%dopar%%` arguments: [%d] %s", length(args), paste(sQuote(names_args), collapse = ", "))
     }
     ## Internal sanity check of Globals object
-    stopifnot(all(names(args) %in% names(globals)))
+    stopifnot(all(names_args %in% names(globals)))
     
     globals_ii <- globals
-    for (name in names(args)) globals_ii[[name]] <- args[[name]]
+    for (name in names_args) globals_ii[[name]] <- args[[name]]
     ## Internal sanity check of Globals object
     stopifnot(length(attr(globals_ii, "where")) == length(globals_ii))
     if (debug) {
@@ -169,7 +179,6 @@ doFuture <- function(obj, expr, envir, data) {
 
   if (debug) mdebug("- extracting results")
   res <- getResult(it)
-  stopifnot(length(res) <= nchunks)
 
   if (debug) mdebug("doFuture() ... DONE")
   
