@@ -14,7 +14,11 @@ SOFTWARE QUALITY:
    combination with plyr (parallel = TRUE) as well as with
    BiocParallel::bplapply() and friends.  Similar tests are already done
    using future.BatchJobs.
- 
+
+ o Added test for foreach::times() %dopar% { ... }.  Especially, it is
+   now tested that global variables are properly identified.  Note that
+   it is not possible to specify neither globals not package in times().
+
 
 Version: 0.3.0 [2016-10-27]
 
